source/style.css
body {
	/* edge */
	--bg: white;
	--bg-highlight: #e8e8e9;
	--highlight: #8d8d8d;
	--highlight-2: #a7a7a7;
	--text-color: black;
	--timer-bg: #555;
	--timer-text-color: white;
	--img-next: url("./icons/next.png");
	--img-settings: url("./icons/settings.png");
	--img-search: url("./icons/search.png");
	--img-remove: url('./icons/x-transparent.png');
	--img-cancel: url('./icons/x.png');
	--img-history: url("./icons/history-19.png");
	--img-options: url("./icons/options.png");
}

body.darkMode {
	--bg: #202124;
	--bg-highlight: #37383a;
	--highlight: #979797;
	--highlight-2: #b1b1b1;
	--text-color: #e8eaed;
	--timer-bg: var(--bg-highlight);
	--timer-text-color: var(--text-color);
	--img-next: url("./icons/next-white.png");
	--img-cancel: url('./icons/x-chrome.png');
	--img-settings: url("./icons/settings-white.png");
	--img-search: url("./icons/search-transparent.png");
	--img-history: url("./icons/history-19-white.png");
	--img-options: url("./icons/options-white.png");
}

body.darkmode ::placeholder {
	color: var(--highlight-2);
	opacity: 1;
}

body.darkmode body.Edge {
	/* edge */
	--bg: #4a4a4a;
	--bg-highlight: #5b5b5b;
	--highlight: #7d7d7d;
	--highlight-2: #979797;
	--img-cancel: url('./icons/x-edge.png');
}

.icon-history {
	background-image : var(--img-history);
}

.icon-options {
	background-image : var(--img-options);
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: var(--bg);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--highlight);
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--highlight-2);
}

body {
	background-color: var(--bg);
}

body, input {
	color: var(--text-color)
}

a {
	cursor: default;
}

.Layer {
	position:    fixed;
	background:  var(--bg);
	top:         0px;
	left:        120%;
	bottom:      30px;
	width:       100%;
	box-shadow:  0px 0px 30px rgba(0, 0, 0, 0.5);
	overflow-y:  auto;
	overflow-x:  hidden;
}

.animate .Layer {
	transition: 0.3s;
}

.Layer.visible {
	left: 0%;	
}

.MultiButton {
	position:   fixed;
	bottom:     0px;
	background: var(--bg);
	box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
}

.MultiButton .Input {
	display: table-cell;
	width:   100%;
	border:  none;
}

.Input input {
	width:   inherit;
	display: block;
}

.Timer {
	background:    var(--timer-bg);
	color:         var(--timer-text-color);
	position:      absolute;
	right:         3px;
	top:           3px;
	font-style:    normal;
	line-height:   7pt;
	padding:       3px 6px;
	font-size:     8pt;
	border-radius: 19px;
	border:        var(--timer-text-color) 1px solid;
	box-shadow:    0px 0px 3px rgba(0, 0, 0, 0.5);
}

.History:hover>.Timer {
	opacity: 0;
}

.hidden {
	display: none;
}

.Remove {
	background: var(--img-remove) var(--timer-bg) no-repeat center center;
	width:      18px;
	height:     18px;
	position:   absolute;
	right:      3px;
	top:        2px;
	display:    block;
	opacity:    0;
	border-radius: 10px;
	border:        var(--timer-text-color) 1px solid;
	box-shadow:    0px 0px 3px rgba(0, 0, 0, 0.5);
}

.History:hover .Remove {
	opacity:    1;
}

.Remove:hover {
	background-color: #E36C43;
}

.Arrow {
	background: var(--img-next) no-repeat center 6px;
	width:      16px;
	height:     16px;
	position:   absolute;
	top:        0px;
	left:       0px;
	width:      100%;
	height:     29px;
}

.animate .Arrow {
	transition: .3s;
}

.on .Arrow {
	transform: rotate(-180deg);
}

.Folder a {
	position: relative;
}

.Slider {
	display: block;
	margin: 4px;
	margin-left: 0px;
}

.Slider input{
	width:          50px;
	vertical-align: middle;
	margin-right:   5px;
	text-align:     center;
	background:     var(--bg);
	border:         1px solid #777;
	color:          var(--text-color);
}

.Slider input[type=range] {
	width: 200px;
}

.Checkbox {
	display: block;
	margin: 5px 0px;
}

.Checkbox input {
	vertical-align: top;
	margin-right: 2px;
}

.Select {
	display: block;
}

.Select select {
	display:        inline-block;
	vertical-align: middle;
	margin:         5px;
	margin-left:    0px;
}

input[type=button] {
	margin-right : 5px;
}

.Textarea {
	border: 1px #bbb solid;
	border-radius: 3px;
	padding: 5px;
}

.Textarea textarea {
	width : 100%;
	min-height: 60px;
	resize: vertical;
	border-radius: 3px;
	margin: 5px 0px;
	font-family: monospace;
}

.Textarea .description {
	background-color: rgb(233, 235, 163);
	color: rgb(95, 91, 36);
	border: rgb(167, 170, 90) solid 1px;
	padding: 5px;
	border-radius: 3px;
}

.Textarea .error {
	background-color: rgb(180, 106, 106);
	color: white;
	border: rgb(202, 0, 0) solid 1px;
	padding: 5px;
	border-radius: 3px;
	display: none;
	margin-bottom: 5px;
}

.Textarea .show {
	display: block;
}

pre {
	margin: 0px;
}

